tests/ui/traits/non_lifetime_binders/foreach-partial-eq.stderr
warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/foreach-partial-eq.rs:1:12
   |
LL | #![feature(non_lifetime_binders)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: can't compare `T` with `T`
  --> $DIR/foreach-partial-eq.rs:10:5
   |
LL |     auto_trait();
   |     ^^^^^^^^^^ no implementation for `T < T` and `T > T`
   |
   = help: the trait `PartialOrd` is not implemented for `T`
note: required by a bound in `auto_trait`
  --> $DIR/foreach-partial-eq.rs:6:27
   |
LL | fn auto_trait()
   |    ---------- required by a bound in this function
LL | where
LL |     for<T> T: PartialEq + PartialOrd,
   |                           ^^^^^^^^^^ required by this bound in `auto_trait`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
